--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,16 @@ config/env/*.env
 links.txt
 tree.txt
 umicom-studio-ide-project.zip
+Refactoring & Modularization.docx
+logs.txt
+Refactoring & Modularization.pdf
+Refactoring & Modularization2.docx
+Refactoring & Modularization2.pdf
+umicom_build_patch_full_comments.zip
+Umicom_Foundation_Repositories__public_.csv
+umicom_stage2_full_files.zip
+umicom-studio-ide-fixed-part1.zip
+uside_patch_set_01.zip
+uside_stage1_files.zip
+uside_stage1_patch_bundle.zip
+src/src.zip
